--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
                     <dirname property="file_path" file="@{asciidoc-file}"/>
 
                     <!-- Remove the path from the root directory until current sourceDirectory to obtain a relative path -->
-                    <script language="javascript">
+                    <script language="javascript" classpathref="maven.plugin.classpath">
                       // overwrite existing property.
                       project.setProperty(
                       'path_to_copy_to',
