#12: avoid JS, #13: use parent, #14: increase UX

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ jsclient/
 eclipse-target/
 **/src/generated/
 **/tmp/
+#Special case only in docgen cause README is copied to modules
+**/README.asciidoc
 
 # Package Files #
 *.jar
