--- a/init/pom.xml
+++ b/init/pom.xml
@@ -6,10 +6,11 @@
   <parent>
     <groupId>com.devonfw.tools</groupId>
     <artifactId>devonfw-docgen</artifactId>
-    <version>${revision}${changelist}</version>
+    <version>5.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>devonfw-docgen-init</artifactId>
   <packaging>pom</packaging>
+  <version>dev-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>Internal module to copy documentation to all modules.</description>
 
