--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,21 @@
-/target
-/.settings
 *.class
 *.classpath
 *.project
 *.iml
+*.jar
+*.war
+*.ear
 .*
+!.gitignore
+!.travis.yml
+!.mvn
 target/
-jsclient/
 eclipse-target/
 **/src/generated/
 **/tmp/
-#Special case only in docgen cause README is copied to modules
+
+#Special case only in docgen cause documentation is copied to modules
 all/documentation
 pdf/documentation
 init/documentation
 html/documentation
-
-# Package Files #
-*.jar
-*.war
-*.ear
