--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <docgen.asciidoc.target>${basedir}/target/asciidoc</docgen.asciidoc.target>
     <docgen.asciidoc.extension>asciidoc</docgen.asciidoc.extension>
     <docgen.generated.docs>${basedir}/target/generated-docs</docgen.generated.docs>
+	  <docgen.docsource>${docgen.asciidoc.page}.${docgen.asciidoc.extension}</docgen.docsource>
     <docgen.images.dir>images</docgen.images.dir>
     <docgen.highlighter>coderay</docgen.highlighter>
     <docgen.headerFooter>true</docgen.headerFooter>
@@ -37,7 +38,7 @@
     <asciidoctor.maven.plugin.version>1.6.0</asciidoctor.maven.plugin.version>
     <asciidoctorj.pdf.version>1.5.0-alpha.18</asciidoctorj.pdf.version>
     <asciidoctorj.epub.version>1.5.0-alpha.9</asciidoctorj.epub.version>
-    <jruby.version>9.2.8.0</jruby.version>
+    <jruby.version>9.2.6.0</jruby.version>
     <asciidoctor.skip>false</asciidoctor.skip>
   </properties>
 
@@ -129,17 +130,17 @@
                     <dirname property="file_path" file="@{asciidoc-file}" />
 
                     <!-- Remove the path from the root directory until current sourceDirectory to obtain a relative path -->
-                    <script language="beanshell"><![CDATA[
+					          <script language="beanshell"><![CDATA[
                       String path = project.getProperty("file_path");
-                      String source = project.getProperty("docgen.asciidoc.source");
-                      path = path.replace(source, "");                      
+                      String source = project.getProperty("basedir");
+                      path = path.replace(source, "");
                       project.setProperty("path_to_copy_to", path);
                     ]]></script>
 
                     <!-- unset variable to ensure it is properly updated in next basename task -->
                     <var name="filename" unset="true" />
                     <basename property="filename" file="@{asciidoc-file}" />
-                    <copy file="@{asciidoc-file}" todir="${docgen.asciidoc.target}${path_to_copy_to}"
+                    <copy file="@{asciidoc-file}" todir="${docgen.asciidoc.target}/${path_to_copy_to}"
                       encoding="${project.build.sourceEncoding}" outputencoding="${project.reporting.outputEncoding}"
                       verbose="true">
                       <filterchain>
@@ -272,12 +273,14 @@
         <configuration>
           <skip>${asciidoctor.skip}</skip>
           <sourceDirectory>${docgen.asciidoc.target}</sourceDirectory>
-          <sourceDocumentName>${docgen.asciidoc.page}.${docgen.asciidoc.extension}</sourceDocumentName>
+          <sourceDocumentName>${docgen.docsource}</sourceDocumentName>
           <imagesDir>${docgen.generated.docs}</imagesDir>
           <backend>${docgen.backend}</backend>
+		      <outputDirectory>${docgen.generated.docs}</outputDirectory>
           <sourceHighlighter>${docgen.highlighter}</sourceHighlighter>
           <headerFooter>${docgen.headerFooter}</headerFooter>
           <preserveDirectories>${docgen.preserveDirectories}</preserveDirectories>
+		      <eruby>erb</eruby>
           <attributes>
             <allow-uri-read />
             <icons>${docgen.icons}</icons>
