--- a/html/pom.xml
+++ b/html/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.devonfw.tools</groupId>
     <artifactId>devonfw-docgen</artifactId>
-    <version>5.0.0</version>
+    <version>5.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>devonfw-docgen-html</artifactId>
   <packaging>pom</packaging>
