--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>com.devonfw.tools</groupId>
   <artifactId>devonfw-docgen</artifactId>
-  <version>5.0.2</version>
+  <version>5.0.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>Generates documentation as PDF, ePub or HTML from AsciiDoc wiki pages.</description>
