--- a/init/pom.xml
+++ b/init/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.devonfw.tools</groupId>
     <artifactId>devonfw-docgen</artifactId>
-    <version>2021.12.001-SNAPSHOT</version>
+    <version>2021.12.001</version>
   </parent>
   <artifactId>devonfw-docgen-init</artifactId>
   <packaging>pom</packaging>
