--- a/pdf/pom.xml
+++ b/pdf/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.devonfw.tools</groupId>
     <artifactId>devonfw-docgen</artifactId>
-    <version>2021.12.002-SNAPSHOT</version>
+    <version>2021.12.002</version>
   </parent>
   <artifactId>devonfw-docgen-pdf</artifactId>
   <packaging>pom</packaging>
