--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,13 @@
   </parent>
   <groupId>com.devonfw.tools</groupId>
   <artifactId>devonfw-docgen</artifactId>
-  <version>2021.12.003-SNAPSHOT</version>
+  <version>${revision}</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>Generates documentation as PDF, ePub or HTML from AsciiDoc wiki pages.</description>
 
   <properties>
+    <revision>2021.12.003-SNAPSHOT</revision>
     <github.repository>devon-docgen</github.repository>
     <docgen.asciidoc.page>documentation/master</docgen.asciidoc.page>
     <docgen.asciidoc.source>${basedir}</docgen.asciidoc.source>
@@ -41,6 +42,7 @@
     <asciidoctorj.epub.version>1.5.0-alpha.9</asciidoctorj.epub.version>
     <jruby.version>9.2.6.0</jruby.version>
     <asciidoctor.skip>false</asciidoctor.skip>
+    <flatten.mode>resolveCiFriendliesOnly</flatten.mode>
   </properties>
 
   <modules>
@@ -78,6 +80,31 @@
 
   <build>
     <plugins>
+      <!-- Flatten POM -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
+        <configuration>
+          <flattenMode>${flatten.mode}</flattenMode>
+          <updatePomFile>true</updatePomFile>
+        </configuration>
+        <executions>
+          <execution>
+            <id>flatten</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>flatten</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>flatten.clean</id>
+            <phase>clean</phase>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
