--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -12,7 +12,7 @@ jobs:
       - name: download and setup IDE
         shell: bash
         run: |
-          mkdirs ~/.devon
+          mkdir ~/.devon
           touch ~/.devon/.license.agreement
           wget -c 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.devonfw.tools.ide&a=devonfw-ide-scripts&v=LATEST&p=tar.gz' -O - | tar -xz && bash setup -
 
