--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -46,7 +46,7 @@ jobs:
             BUILD_USER: ${{ secrets.BUILD_USER }}
             BUILD_USER_PASSWD: ${{ secrets.BUILD_USER_PASSWD }}
             BUILD_USER_EMAIL: ${{ secrets.BUILD_USER_EMAIL }}
-          run: devonfw release -f
+          run: devon release -f
 
         - name: 'Get release tag'
           id: get_tag
