--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build
         run: |
-          CLI=scripts/devon
+          CLI="${PWD}/scripts/devon"
           cd workspaces/main/docgen
           $CLI mvn install
 
