--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -6,31 +6,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  setup-devonfw-ide:
-    runs-on: ubuntu-latest
-    steps:
-      - name: download and setup IDE
-        shell: bash
-        run: |
-          mkdir ~/.devon
-          touch ~/.devon/.license.agreement
-          wget -c 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.devonfw.tools.ide&a=devonfw-ide-scripts&v=LATEST&p=tar.gz' -O - | tar -xz && bash setup -
-
   build:
-    needs: [setup-devonfw-ide]
     runs-on: ubuntu-latest
     steps:
-      - name: Clone Repository
-        uses: actions/checkout@v2
-        with: 
-          path: 'workspaces/main/docgen'
+      - uses: devonfw-actions/java-maven-setup@v2
+        with:
+          maven-cache-key: dep-${{ hashFiles('**/pom.xml') }}
 
       - name: Build
-        run: |
-          ls -al
-          CLI="${PWD}/scripts/devon"
-          cd workspaces/main/docgen
-          $CLI mvn install
+        run: mvn install
 
   release:
       needs: [build]
@@ -42,6 +26,18 @@ jobs:
       outputs:
         release_tag: ${{ steps.get_tag.outputs.tagname }}
       steps:
+        - name: download and setup IDE
+          shell: bash
+          run: |
+            mkdir ~/.devon
+            touch ~/.devon/.license.agreement
+            wget -c 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.devonfw.tools.ide&a=devonfw-ide-scripts&v=LATEST&p=tar.gz' -O - | tar -xz && bash setup -
+          
+        - name: Clone Repository
+          uses: actions/checkout@v2
+          with: 
+            path: 'workspaces/main/docgen'
+          
         - name: Release
           id: release
           shell: bash
@@ -53,7 +49,10 @@ jobs:
             BUILD_USER: ${{ secrets.BUILD_USER }}
             BUILD_USER_PASSWD: ${{ secrets.BUILD_USER_PASSWD }}
             BUILD_USER_EMAIL: ${{ secrets.BUILD_USER_EMAIL }}
-          run: devon release -f
+          run: |
+            CLI="${PWD}/scripts/devon
+            cd workspaces/main/docgen
+            devon release -f
 
         - name: 'Get release tag'
           id: get_tag
