--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -37,6 +37,16 @@ jobs:
           uses: actions/checkout@v2
           with: 
             path: 'workspaces/main/docgen'
+        
+        - uses: devonfw-actions/java-maven-setup@v2
+          with:
+            clone: false
+            maven-cache-key: dep-${{ hashFiles('**/pom.xml') }}
+            GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+            GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+            BUILD_USER: ${{ secrets.BUILD_USER }}
+            BUILD_USER_PASSWD: ${{ secrets.BUILD_USER_PASSWD }}
+            BUILD_USER_EMAIL: ${{ secrets.BUILD_USER_EMAIL }}
           
         - name: Release
           id: release
