--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -34,22 +34,18 @@ jobs:
             wget -c 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.devonfw.tools.ide&a=devonfw-ide-scripts&v=LATEST&p=tar.gz' -O - | tar -xz && bash setup -
             echo "DEVON_CLI=${PWD}/scripts/devon" >> $GITHUB_ENV
           
-        - name: Clone Repository
-          uses: actions/checkout@v2
-          with: 
-            path: 'workspaces/main/docgen'
-          
         - run: cd workspaces/main/docgen
         
         - uses: devonfw-actions/java-maven-setup@v3
           with:
-            clone: false
             maven-cache-key: dep-${{ hashFiles('**/pom.xml') }}
             GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
             GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
             BUILD_USER: ${{ secrets.BUILD_USER }}
             BUILD_USER_PASSWD: ${{ secrets.BUILD_USER_PASSWD }}
             BUILD_USER_EMAIL: ${{ secrets.BUILD_USER_EMAIL }}
+            
+        - run: ls -al
           
         - name: Release
           id: release
