--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -34,7 +34,7 @@ jobs:
             wget -c 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.devonfw.tools.ide&a=devonfw-ide-scripts&v=LATEST&p=tar.gz' -O - | tar -xz && bash setup -
             echo "DEVON_CLI=${PWD}/scripts/devon" >> $GITHUB_ENV
           
-        - run: cd workspaces/main/docgen
+        - run: cd workspaces/main
         
         - uses: devonfw-actions/java-maven-setup@v3
           with:
