--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -33,6 +33,9 @@ jobs:
             touch ~/.devon/.license.agreement
             wget -c 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.devonfw.tools.ide&a=devonfw-ide-scripts&v=LATEST&p=tar.gz' -O - | tar -xz && bash setup -
             echo "DEVON_CLI=${PWD}/scripts/devon" >> $GITHUB_ENV
+            echo "PWD is $PWD"
+            ls -al
+            ls -al scripts
           
         - run: cd workspaces/main
         
