--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -52,8 +52,8 @@ jobs:
             touch ~/.devon/.license.agreement
             wget -c 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.devonfw.tools.ide&a=devonfw-ide-scripts&v=LATEST&p=tar.gz' -O - | tar -xz && bash setup -
             DEVON_CLI="${PWD}/scripts/devon"
-            find .
             cd workspaces/main/docgen
+            \cp .mvn/settings.xml ../../../conf/.m2/settings.xml
             $DEVON_CLI release -f
             
             # Get tag name
