--- a/pom.xml
+++ b/pom.xml
@@ -362,6 +362,27 @@
 
   <profiles>
     <profile>
+      <id>docgen-autodeploy</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.8</version>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>ossrh</serverId>
+              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>false</autoReleaseAfterClose>
+              <autoDropAfterRelease>false</autoDropAfterRelease>
+              <description>Release ${project.groupId}:${project.artifactId}.${project.version}</description>
+              <skipNexusStagingDeployMojo>${maven.deploy.skip}</skipNexusStagingDeployMojo>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>custom-style</id>
       <activation>
         <file>
